# fretboard-old

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TAGS  aboutbox.c  aboutbox.h  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  guitune.cc  guitune.h  lcdview.cc  lcdview.h  logview.cc  logview.h  main.cc  osziview.cc  osziview.h  python-interp.cc  python-interp.h  resources.h
.deps/: aboutbox.Po  guitune.Po  lcdview.Po  logview.Po  main.Po  osziview.Po  python-interp.Po
autom4te.cache/: output.0  requests  traces.0
sampleconfig/: freqprint.py  keyb.py
